began to implement github updater (defect!)
